@@ -10,4 +10,15 @@
  * @author Mike Cochrane <mike@graftonhall.co.nz>
  */
 
-require __DIR__ . '/filters.php';
+require_once __DIR__ . '/lib/Application.php';
+Horde_Registry::appInit('ingo');
+
+switch ($registry->getView()) {
+case $registry::VIEW_SMARTMOBILE:
+    Horde::url('smartmobile.php')->redirect();
+    break;
+
+default:
+    require __DIR__ . '/filters.php';
+    break;
+}
