@@ -41,6 +41,12 @@ class Ingo_Application extends Horde_Registry_Application
 {
     /**
      */
+    public $features = array(
+        'smartmobileView' => true
+    );
+
+    /**
+     */
     public $version = 'H5 (3.0.0beta2)';
 
     /**
