@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [mms] Initial implementation of smartmobile view.
 * [mms] Disable blacklist, vacation, and whitelist API methods if the preference is locked.
  </notes>
  <contents>
@@ -1077,6 +1078,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [mms] Initial implementation of smartmobile view.
 * [mms] Disable blacklist, vacation, and whitelist API methods if the preference is locked.
    </notes>
   </release>
